src/objects/FAM__FA_Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>FAM__Class__c</fullName>
        <description>The name of the class where the error occurred.</description>
        <label>Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAM__Message__c</fullName>
        <description>A message associated with the error entry.</description>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAM__Trace__c</fullName>
        <label>Trace</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>FA Error Log</label>
    <listViews>
        <fullName>FAM__All</fullName>
        <columns>NAME</columns>
        <columns>FAM__Class__c</columns>
        <columns>FAM__Message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ERR-{0000}</displayFormat>
        <label>Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>